Mise à jour : version 1.1.0

--- a/index_dev.html
+++ b/index_dev.html
@@ -10,7 +10,7 @@
 		  <link rel="stylesheet" href="./vendor/w3school/styles/w3.css">
 		  <link rel="stylesheet" href="./src/lib/styles/app.css">
 		  <link rel="stylesheet" href="./src/lib/styles/exercice.css">
-		  <title>_mon_application_: DEV!</title>
+		  <title>generateur_json: DEV!</title>
 	</head>
 <!-- ==================================
  *     Une application skelapp          *
